bug 486621 -  Should close file handle in gfxWindowsPlatform::FindFonts() r=vlad